--- a/package.json
+++ b/package.json
@@ -1,69 +1,45 @@
 {
-  "name": "gulp-builder",
-  "version": "2.1.0",
-  "description": "gulp-builder for weblayout",
-  "main": "gulpfile.js",
+  "name": "my-portfolio_frontend",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "html": "node-w3c-validator -f lint -evH -i app/**/*.html",
-    "dev": "gulp",
-    "build": "gulp build",
-    "cache": "gulp cache",
-    "backend": "gulp backend",
-    "zip": "gulp zip",
-    "code": "editorconfig-checker"
-  },
-  "author": "MaxGraph",
-  "license": "ISC",
-  "devDependencies": {
-    "@babel/core": "^7.16.7",
-    "@babel/preset-env": "^7.16.7",
-    "babel-loader": "^8.2.3",
-    "browser-sync": "^2.26.14",
-    "del": "^6.0.0",
-    "editorconfig-checker": "^4.0.1",
-    "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^7.0.1",
-    "gulp-cheerio": "^1.0.0",
-    "gulp-clean-css": "^4.3.0",
-    "gulp-cli": "^2.3.0",
-    "gulp-file-include": "^2.3.0",
-    "gulp-htmlmin": "^5.0.1",
-    "gulp-if": "^3.0.0",
-    "gulp-imagemin": "^7.1.0",
-    "gulp-notify": "^3.2.0",
-    "gulp-plumber": "^1.2.1",
-    "gulp-replace": "^1.1.3",
-    "gulp-rev": "^9.0.0",
-    "gulp-rev-delete-original": "^0.2.3",
-    "gulp-rev-rewrite": "^4.0.0",
-    "gulp-sass": "^5.0.0",
-    "gulp-svg-sprite": "^1.5.0",
-    "gulp-svgmin": "^4.1.0",
-    "gulp-typograf": "^4.0.3",
-    "gulp-webp": "^4.0.1",
-    "gulp-zip": "^5.1.0",
-    "node-w3c-validator": "^2.0.1",
-    "postcss": "^8.4.5",
-    "postcss-scss": "^4.0.2",
-    "sass": "^1.45.1",
-    "stylelint": "^14.2.0",
-    "stylelint-config-standard-scss": "^3.0.0",
-    "stylelint-order": "^5.0.0",
-    "typograf": "^6.14.1",
-    "webpack": "^5.65.0",
-    "webpack-stream": "^7.0.0"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@popperjs/core": "^2.11.2",
-    "aos": "^2.3.4",
-    "graph-modal": "^1.0.4",
-    "graph-tabs": "^1.0.0",
-    "inputmask": "^5.0.7",
-    "just-validate": "^3.3.3",
-    "rellax": "^1.12.1",
-    "simplebar": "^5.3.6",
-    "smooth-scroll": "^16.1.3",
-    "swiped-events": "^1.1.6",
-    "swiper": "^7.4.1"
-  }
+    "core-js": "^3.8.3",
+    "vue": "^3.2.13",
+    "vue-router": "^4.0.3"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.12.16",
+    "@babel/eslint-parser": "^7.12.16",
+    "@vue/cli-plugin-babel": "~5.0.0",
+    "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-plugin-router": "~5.0.0",
+    "@vue/cli-service": "~5.0.0",
+    "eslint": "^7.32.0",
+    "eslint-plugin-vue": "^8.0.3"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/vue3-essential",
+      "eslint:recommended"
+    ],
+    "parserOptions": {
+      "parser": "@babel/eslint-parser"
+    },
+    "rules": {}
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead",
+    "not ie 11"
+  ]
 }
